--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -98,7 +98,7 @@
                                                         <img src="http://beerstrot.it/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Mazza">
                                                         <div class="panel">
                                                             <h5>Giulia Mazza</h5>
-                                                            <h6 class="subheader">CEO | Master Brewer</h6>
+                                                            <h6 class="subheader">Blogger</h6>
                                                         </div>
                                                     </a>
                                                 </li>
@@ -107,7 +107,7 @@
                                                         <img src="http://beerstrot.it/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
                                                         <div class="panel">
                                                             <h5>Andrea Tagliazucchi</h5>
-                                                            <h6 class="subheader">CFO | Beer Server</h6>
+                                                            <h6 class="subheader">CFO | Barista</h6>
                                                         </div>
                                                     </a>
                                                 </li>
