--- a/chi-siamo/team/andrea-tagliazucchi.html
+++ b/chi-siamo/team/andrea-tagliazucchi.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Beerstrot | Giovanni Attilio</title>
-    <meta name="description" content="Fondatore di Beerstrot e brewer master in charge"/>
-    <meta name="author" content="Ca' Vecchia Beerstrot"/>
+    <title>Beerstrot | Team | Andrea Tagliazucchi</title>
+    <meta name="description" content="Fondatore di Beerstrot e barista in charge"/>
+    <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
@@ -43,15 +43,15 @@
     <header>
         <div id="image-background-team">
             <img class="image-hero" src="http://beerstrot.github.io/img/large/tapas.jpg" alt="birre stupende" />
-             <img class="user-image" src="http://beerstrot.github.io/img/thumbs/giovanni-attilio-th.jpg" alt="Giovanni Attilio">
+             <img class="user-image" src="http://beerstrot.github.io/img/thumbs/andrea-th.jpg" alt="Andrea Tagliazucchi">
         </div>
         <div class="row">
             <div class="medium-10 large-9 columns extra-space">
-                <h1>Giovanni Attilio</h1>
-                <p class="by-line">Fondatore di Beerstrot e master brewer in charge</p>
+                <h1>Andrea Tagliazucchi</h1>
+                <p class="by-line">Fondatore di Beerstrot e barista in charge</p>
                 <blockquote>
-                    <p>Scrivo di birra e mi piace berla di brutto. ma solo birra artigianale. <br>Tutte le foto sono fatte con un iphone 4s e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
-                    <cite>Giovanni</cite>
+                    <p>Scrivo di birra e mi piace berla di brutto. ma solo birra artigianale. <br> Tutte le foto sono fatte con un iphone 4s e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
+                    <cite>Andrea</cite>
                     </p>
                 </blockquote>
             </div>
