--- a/chi-siamo/team/andrea-tagliazucchi.html
+++ b/chi-siamo/team/andrea-tagliazucchi.html
@@ -43,7 +43,7 @@
     <header>
         <div id="image-background-team">
             <img class="image-hero" src="http://beerstrot.github.io/img/large/tapas.jpg" alt="birre stupende" />
-             <img class="user-image" src="http://beerstrot.github.io/img/thumbs/andrea-th.jpg" alt="Andrea Tagliazucchi">
+             <img class="user-image" src="http://beerstrot.github.io/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
         </div>
         <div class="row">
             <div class="medium-10 large-9 columns extra-space">
