--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -97,7 +97,7 @@
                                                     <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">
                                                         <img src="http://beerstrot.it/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Mazza">
                                                         <div class="panel">
-                                                            <h5>Giulia Mazza</h5>
+                                                            <h5>Giulia</h5>
                                                             <h6 class="subheader">Blogger</h6>
                                                         </div>
                                                     </a>
@@ -106,8 +106,8 @@
                                                     <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">
                                                         <img src="http://beerstrot.it/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
                                                         <div class="panel">
-                                                            <h5>Andrea Tagliazucchi</h5>
-                                                            <h6 class="subheader">CFO | Barista</h6>
+                                                            <h5>Andrea</h5>
+                                                            <h6 class="subheader">Barista</h6>
                                                         </div>
                                                     </a>
                                                 </li>
@@ -115,8 +115,8 @@
                                                     <a href="http://beerstrot.it/chi-siamo/team/giovanni-attilio.html">
                                                         <img src="http://beerstrot.it/img/thumbs/giovanni-attilio-th.jpg" alt="Giovanni Attilio">
                                                         <div class="panel">
-                                                            <h5>Giovanni Attilio</h5>
-                                                            <h6 class="subheader">CEO | Master Brewer</h6>
+                                                            <h5>Giovanni</h5>
+                                                            <h6 class="subheader">Brewer</h6>
                                                         </div>
                                                     </a>
                                                 </li>
