changing home wip

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="copyright" content="Beerstrot Copyright (c) 2015" />
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css" />
+    <link rel="stylesheet" href="css/app.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -95,21 +95,24 @@
         </div>
     </header>
 <!-- fine hero -->
-    <div class="row">
-        <div class="medium-12 large-12 columns">
-            <div class="row">
-                <div class="medium-4 large-4 columns">
-                    <h1 class="extra-space">Menu</h1>
-                    <img class="extra-space-image-event-blog" src=" http://placehold.it/1920x1080" alt="">
-                    <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
-                    <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
-                    
-                    <a role="button" href="menu.html" class="">Scopri le Delizie &rarr;</a><br>
-                </div>
-                <div class="medium-4 large-4 columns">
-                    <h1 class="extra-space">Eventi</h1>
-                    <img class="extra-space-image-event-blog" src=" http://placehold.it/1920x1080" alt="">
-                    <p>A Beerstrot facciamo un sacco di eventi: 
+    <div class="panel-home-n extra-space-footer">
+        <div class="row">
+            <div class="medium-6 large-6 columns" >
+                <h1>Menu</h1>
+                <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
+                <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
+                <a role="button" href="http://beerstrot.github.io/menu" class="">Scopri le Delizie &rarr;</a>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <img src=" http://placehold.it/1920x1080" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-2n extra-space-footer">
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <h1 class="extra-space">Eventi</h1>
+                <p>A Beerstrot facciamo un sacco di eventi:</p>
                     <ul class="no-margin-list-bullet">
                         <li>Abbinamenti di cibi e birre</li>
                         <li>Concerti con volume non assordante</li>
@@ -117,32 +120,49 @@
                         <li>Burlesque</li>
                     </ul>
                     <p>E tanto altro&hellip;</p>
-                    <a role="button" href="eventi.html" class="">Scopri i Prossimi Eventi &rarr;</a>
-                </div>
-                <div class="medium-4 large-4 columns end">
-                    <h1 class="extra-space">Chi Siamo</h1>
-                    <img class="extra-space-image-event-blog" src=" http://placehold.it/1920x1080" alt="">
-                    <p>Tutto, ma proprio tutto su di noi. Chi siamo, la nostra storia, perchè esistiamo.</p>
-                    <p>Immagini e video dell'esperienza che vivi.</p>
-                    <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
-                    <a role="button" href="chi-siamo.html" class="">Scopri Chi Siamo &rarr;</a>
-                </div>
+                    <a role="button" href="http://beerstrot.github.io/eventi" class="">Scopri i Prossimi Eventi &rarr;</a>
             </div>
-            <div class="row">
-                <div class="medium-4 large-4 columns">
-                    <h1 class="extra-space">Contatti</h1>
-                    <img class="extra-space-image-event-blog" src=" http://placehold.it/1920x1080" alt="">
-                    <p>Come raggiungerci, contattarci o prenotare un tavolo</p>
-                    <p>Vuoi la nostra birra nel tuo pub? Sei un blogger o un giornalista? Cerchi lavoro? Compila i form e ricevi tutte le informazioni necessarie.</p>
-                    <a role="button" href="contatti.html" class="">Contattaci &rarr;</a>
-                </div>
-                <div class="medium-4 large-4 columns end">
-                    <h1 class="extra-space">Blog</h1>
-                    <img class="extra-space-image-event-blog" src=" http://placehold.it/1920x1080" alt="">
-                    <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
-                    <p>I piatti del giorno: li creiamo al momento a seconda delle primizie che troviamo alla mattina&hellip;</p>
-                    <a role="button" href="blog.html" class="">Vai alle Notizie e alle Novità &rarr;</a>
-                </div>
+            <div class="medium-6 large-6 columns">
+                <img class="extra-space" src=" http://placehold.it/1920x1080" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-n extra-space-footer">
+        <div class="row">
+            <div class="medium-6 large-6 columns" >
+                <h1>Chi siamo</h1>
+                <p>Tutto, ma proprio tutto su di noi. Chi siamo, la nostra storia, perchè esistiamo.</p>
+                <p>Immagini e video dell'esperienza che vivi.</p>
+                <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
+                <a role="button" href="http://beerstrot.github.io/chi-siamo" class="">Scopri Chi Siamo &rarr;</a>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <img src=" http://placehold.it/1920x1080" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-2n extra-space-footer">
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <h1 class="extra-space">Contatti</h1>
+                <p>Come raggiungerci, contattarci o prenotare un tavolo</p>
+                <p>Vuoi la nostra birra nel tuo pub? Sei un blogger o un giornalista? Cerchi lavoro? Compila i form e ricevi tutte le informazioni necessarie.</p>
+                <a role="button" href="http://beerstrot.github.io/contatti" class="">Contattaci &rarr;</a>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <img class="extra-space" src=" http://placehold.it/1920x1080" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-n extra-space-footer">
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <h1 class="extra-space">Blog</h1>
+                <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
+                <a role="button" href="http://beerstrot.github.io/blog" class="">Vai alle Notizie e alle Novità &rarr;</a>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <img class="extra-space" src=" http://placehold.it/1920x1080" alt="">
             </div>
         </div>
     </div>
