fixing home layout

--- a/index.html
+++ b/index.html
@@ -48,70 +48,25 @@
                 <h1 itemprop="description">Birra artigianale e alta cucina&#8230; alla portata di tutti</h1>
             </div>
         </div>
-        <div class="row text-highlight show-for-small extra-space-hero">
-            <div class="medium-4 large-4 columns" itemscope itemtype="http://schema.org/Restaurant">
-                <div>
-                    <h3>Dove Siamo</h3>
-                    <h4>
-                        <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                            <span itemprop="streetAddress">Via Centofinestre, 20</span>
-                            <br class="hide-for-small">
-                            <span itemprop="postalCode">60024</span>
-                            <span itemprop="addressLocality">Filottrano</span>
-                            <span itemprop="addressRegion">AN</span>
-                            <br class="hide-for-small">
-                            <span class="hide-for-small" itemprop="addressCountry">Italy</span>
-                        </a>
-                    </h4>
-                </div>
-            </div>
-            <div class="medium-4 large-4 columns" itemscope itemtype="http://schema.org/Restaurant">
-                <h3>Prenota</h3>
-                <h5>
-                    <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
-                </h5>
-            </div>
-            <div class="medium-4 large-4 columns" itemscope itemtype="http://schema.org/Restaurant">
-                <h3>Orari apertura</h3>
-                <h5>
-                    <meta itemprop="openingHours" content="Su,Mo,Tu,We,Th 17:00-24:00"><span> Dom&#8202;&ndash;&#8202;Gio: 17:00&#8202;&ndash;&#8202;24:00</span>
-                </h5>
-                 <h5>
-                    <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00"><span> Ven&#8202;&ndash;&#8202;Sab: 17:00&#8202;&ndash;&#8202;01:00</span>
-                </h5>
-                <span class="hide">
-                    <br>
-                    <h3>Categories</h3>
-                    <span itemprop="servesCuisine">Middle Eastern</span>,
-                    <span itemprop="servesCuisine">Mediterranean</span>
-                    <br>
-                    <h3>Price Range</h3>:
-                    <span itemprop="priceRange">$$</span>
-                    <br>
-                    <h3>Takes Reservations:</h3>
-                    <h5>Yes</h5>
-                </span>
-            </div>
-        </div>
     </header>
 <!-- fine hero -->
-    <div class="panel-home-n extra-space-footer">
+    <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 columns" >
                 <h1>Menu</h1>
                 <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
                 <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
-                <a role="button" href="http://beerstrot.github.io/menu" class="">Scopri le Delizie &rarr;</a>
+                <a role="button" href="http://beerstrot.github.io/menu">Scopri le Delizie &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <img src=" http://placehold.it/1920x1080" alt="">
+                <img src="http://beerstrot.github.io/img/large/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home">
             </div>
         </div>
     </div>
-    <div class="panel-home-2n extra-space-footer">
+    <div class="panel-home-2n">
         <div class="row">
-            <div class="medium-6 large-6 columns">
-                <h1 class="extra-space">Eventi</h1>
+            <div class="medium-6 large-6 medium-push-6 large-push-6 columns">
+                <h1>Eventi</h1>
                 <p>A Beerstrot facciamo un sacco di eventi:</p>
                     <ul class="no-margin-list-bullet">
                         <li>Abbinamenti di cibi e birre</li>
@@ -120,54 +75,55 @@
                         <li>Burlesque</li>
                     </ul>
                     <p>E tanto altro&hellip;</p>
-                    <a role="button" href="http://beerstrot.github.io/eventi" class="">Scopri i Prossimi Eventi &rarr;</a>
+                    <a role="button" href="http://beerstrot.github.io/eventi">Scopri i Prossimi Eventi &rarr;</a>
             </div>
-            <div class="medium-6 large-6 columns">
-                <img class="extra-space" src=" http://placehold.it/1920x1080" alt="">
+            <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
+                <img src="http://beerstrot.github.io/img/large/burlesque.jpg" alt="" class="extra-space-image-tab-home">
             </div>
         </div>
     </div>
-    <div class="panel-home-n extra-space-footer">
+    <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 columns" >
                 <h1>Chi siamo</h1>
                 <p>Tutto, ma proprio tutto su di noi. Chi siamo, la nostra storia, perchè esistiamo.</p>
                 <p>Immagini e video dell'esperienza che vivi.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
-                <a role="button" href="http://beerstrot.github.io/chi-siamo" class="">Scopri Chi Siamo &rarr;</a>
+                <a role="button" href="http://beerstrot.github.io/chi-siamo">Scopri Chi Siamo &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <img src=" http://placehold.it/1920x1080" alt="">
+                <img src="http://beerstrot.github.io/img/large/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home">
             </div>
         </div>
     </div>
-    <div class="panel-home-2n extra-space-footer">
+    <div class="panel-home-2n">
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h1 class="extra-space">Contatti</h1>
+                <h1>Contatti</h1>
                 <p>Come raggiungerci, contattarci o prenotare un tavolo</p>
                 <p>Vuoi la nostra birra nel tuo pub? Sei un blogger o un giornalista? Cerchi lavoro? Compila i form e ricevi tutte le informazioni necessarie.</p>
-                <a role="button" href="http://beerstrot.github.io/contatti" class="">Contattaci &rarr;</a>
+                <a role="button" href="http://beerstrot.github.io/contatti">Contattaci &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <img class="extra-space" src=" http://placehold.it/1920x1080" alt="">
+                <img src="http://beerstrot.github.io/img/large/mappa.jpg" alt="" class="extra-space-image-tab-home">
             </div>
         </div>
     </div>
-    <div class="panel-home-n extra-space-footer">
+    <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h1 class="extra-space">Blog</h1>
+                <h1>Blog</h1>
                 <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
-                <a role="button" href="http://beerstrot.github.io/blog" class="">Vai alle Notizie e alle Novità &rarr;</a>
+                <a role="button" href="http://beerstrot.github.io/blog">Vai alle Notizie e alle Novità &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <img class="extra-space" src=" http://placehold.it/1920x1080" alt="">
+                <img src="http://beerstrot.github.io/img/large/birre-in-love.jpg" alt="" class="extra-space-image-tab-home">
             </div>
         </div>
     </div>
 <!-- inizio footer -->
-    <footer class="panel-prefooter extra-space-footer">
+
+    <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
@@ -187,7 +143,6 @@
             </div>
             <div class="large-6 medium-6 columns exta-space">
                 <h4 class="subheader exta-space">Iscriviti alla newsletter</h4>
-
                 <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> 
                     <div class="row collapse">
                         <div class="small-8 columns">
@@ -258,7 +213,7 @@
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Paga con</h4>
-                <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-3">
+                <ul class="small-block-grid-3 medium-block-grid-3 large-block-grid-3">
                                         <li>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 106.2" style="max-width: 80px"  enable-background="new 0 0 170 106.2"><g><path class="img-cards" fill="#3A58A8" d="M169.9 100.5c0 3.1-2.6 5.7-5.7 5.7H5.7c-3.1 0-5.7-2.6-5.7-5.7V5.7C0 2.6 2.6 0 5.7 0h158.6c3.1 0 5.7 2.6 5.7 5.7v94.8h-.1z"/><g fill="#fff"><path d="M78.2 69.1h-8.3l5.2-32h8.3zM62.9 37.1l-7.9 22-.9-4.7L51.2 40s-.3-2.8-3.9-2.8H34.2l-.2.5s4.1.8 8.7 3.7L50 69.1h8.7l13.1-32h-8.9zM128.2 69.1h7.6l-6.6-31.8h-6.6c-3.1 0-3.8 2.4-3.8 2.4l-12.3 29.4h8.7l1.8-4.7h10.6l.6 4.7zm-9.1-11.4l4.3-11.9 2.4 11.9h-6.7zM106.9 44.8l1.2-6.9s-3.7-1.3-7.5-1.3c-4.1 0-14 1.8-14 10.6 0 8.3 11.5 8.4 11.5 12.6 0 4.3-10.3 3.5-13.7.8l-1.2 7.2s3.7 1.8 9.3 1.8c5.7 0 14.2-3 14.2-11 0-8.3-11.6-9.1-11.6-12.6.3-3.6 8.3-3.1 11.8-1.2z"/></g><path fill="#FAA634" d="M54 54.3L51.2 40s-.3-2.8-3.9-2.8H34.1l-.1.5s6.2 1.3 12.3 6.2c5.9 4.6 7.7 10.4 7.7 10.4z"/></g></svg>
                     </li>
