--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -2,12 +2,24 @@
 <!--[if IE 9]><html class="lt-ie10" lang="it" > <![endif]-->
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Beerstrot | Burlesque</title>
-    <meta name="description" content="Gloria e compagne ci delizieranno con uno spettacolo di Burlesque parigino e nel frattempo serviranno i tavoli con qualche pausa per lo spettacolo." />
-    <meta name="author" content="Ca' Vecchia Beerstrot" />
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
+    <title>Beerstrot | Apertura col botto</title>
+    <meta name="description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
+    <meta name="author" content="Giulia Mazza"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@beerstrot"/>
+    <meta name="twitter:title" content="Apertura col Botto"/>
+    <meta name="twitter:description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
+    <meta name="twitter:image" content="http://beerstrot.github.io/img/large/birre-in-love.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/eventi/apertura.html"/>
+    <meta property="og:url" content="http://beerstrot.it/eventi/apertura.html"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Apertura col Botto"/>
+    <meta property="og:description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
+    <meta property="og:image" content="http://beerstrot.github.io/img/large/birre-in-love.jpg"/>
+    <link rel="canonical" href="http://beerstrot.it/eventi/apertura.html"/>
     <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -47,17 +59,17 @@
                <header>
                     <div class="row">
                         <div class="medium-12 large-12 columns">
-                            <h1>Burlesque</h1>
-                            <h6 class="by-line">Written by <a href="http://beerstrot.github.io/team/juliet-maza.html">Juliet Mazà</a>
-                            <h6 class="by-line">Photo Credit <a href="http://beerstrot.github.io/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
+                            <h1>Apertura col botto</h1>
+                            <h6 class="by-line">Scritto da <a href="http://beerstrot.github.io/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a>
+                            <h6 class="by-line">Fotografia <a href="http://beerstrot.github.io/hi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                         </div>
                     </div>
                     <div class="row">
                         <div class="medium-12 large-12 columns">
                             <div class="share-block">
-                                <h5 class="date" style="margin-top: 0.5em;">22 Ottobre 2014</h5>
-                                <h5>Dalle 19:00 alle 21:00</h5>
-                                <h5><a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i> Outrgeous Craft Beer</a></h5>
+                                <h5 class="date" style="margin-top: 0.5em;">25 Aprile 2014</h5>
+                                <h5>Dalle 17:00 alle 22:00</h5>
+                                <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
                             </div>
                         </div>
                     </div>
@@ -65,63 +77,13 @@
             </aside>
             <div class="medium-8 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Un evento per tossici della birra</h2>
-                <p>Per il ciclo: Servizi di Classe&#8202;&mdash;&#8202;Il Burlesque. 
+                <p>Per il ciclo: Si parte&#8202;&mdash;&#8202;Il Burlesque. 
                 <p>Gloria e compagne ci delizieranno con uno spettacolo di Burlesque parigino e nel frattempo serviranno i tavoli con qualche pausa per lo spettacolo.</p>
                 <p>Raffinatissimo, elegantissimmo e incredibilmente ironico: le signore lo adoreranno.</p>
 <!-- call to action inizio -->
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <a role="button" href="#" class="button extra-space-button" data-reveal-id="prenota-online">Prenota un tavolo</a>
-                    <div id="prenota-online" class="reveal-modal" data-reveal>
-                        <a class="close-reveal-modal">&#215; </a> 
-                            <form action="input">
-                            <div class ="row">
-                                <div class="small-5 medium-2 large-2 columns">  
-                                    <label>Persone
-                                        <select>
-                                          <option value="1">1</option>
-                                          <option value="2">2</option>
-                                          <option value="3">3</option>
-                                          <option value="4">4</option>
-                                          <option value="5">5</option>
-                                          <option value="6">6</option>
-                                          <option value="7">7</option>
-                                          <option value="8">8</option>
-                                        </select>
-                                      </label>
-                                </div>
-                            </div>
-                            <div class ="row">
-                                <div class="small-7 medium-4 large-3 columns">  
-                                    <label>Data
-                                        <input type="text" value="22 Ottobre 2014" readonly />
-                                      </label>
-                                </div>
-                                <div class="small-5 medium-3 large-2 columns end">  
-                                    <label>Ora
-                                        <input type="time" value="19:00" readonly/>
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="small-12 medium-5 large-6 columns">  
-                                    <label>Nome e Cognome
-                                        <input type="text" placeholder="Nome Cognome" />
-                                    </label>
-                                </div>
-                                <div class="small-12  medium-7 large-6 columns">  
-                                    <label>Email
-                                        <input type="email" placeholder="email" />
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="small-12 medium-12 large-12 columns end">
-                                    <a role="button" href="#" class="button extra-space-button">Prenota e ricevi conferma</a>
-                                </div> 
-                            </div>
-                        </form>  
-                    </div>
+                        <a role="button" href="tel:+393385071940" class="button extra-space-button">Prenota un tavolo</a>
                     </div>
                 </div>
             </div>   
@@ -139,13 +101,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="small-block-grid-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/eventi-burlesque.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/eventi/apertura.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/eventi-burlesque-la-birra.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/eventi/apertura.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/eventi-burlesque.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/eventi/apertura.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
