--- a/eventi/index.html
+++ b/eventi/index.html
@@ -51,57 +51,17 @@
         <div class="medium-12 large-12 columns">
             <article class="row">  
                 <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">19 ott 2014</h3>
+                    <h3 class="date extra-space-date-aside">25 Apr 2014</h3>
                     <h5>Orario: 17:00-22:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Outrgeous Craft Beer</a></h5>  
-                </div>
-                <div class="medium-3 large-3 columns">
-                    <img class="extra-space-image-event" src="http://beerstrot.github.io/img/thumbs/il-violino-e-la-birra-th.jpg" alt="birra e violino">
-                </div>
-                <div class="medium-6 large-6 columns">
-                    <h2>Il violino e la birra</h2>
-                    <p>Il violino di Zanna l'Elefante ci allieterà nella degustazione della <a href="menu-black-ipa-violin.html">Beerstrot Black IPA Violin</a>. Una birra con una cattiveria inaudita.</p>
-                    <a href="http://beerstrot.github.io/eventi/il-violino-e-la-birra.html">Scopri l'evento &rarr;</a>
-                </div>
-                <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
-                    </div>
-                </div>
-            </article>
-            <article class="row">
-                <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">22 ott 2014</h3>
-                    <h5>Orario: 19:00-22:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Outrgeous Craft Beer</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
                     <img class="extra-space-image-event" src="http://beerstrot.github.io/img/thumbs/burlesque-th.jpg" alt="Burlesque">
                 </div>
                 <div class="medium-6 large-6 columns">
-                    <h2>Bourlesque</h2>
-                    <p>Gloria e compagne ci delizieranno con uno spettacolo di Burlesque parigino e nel frattempo serviranno i tavoli con qualche pausa per lo spettacolo.</p>
-                    <a href="http://beerstrot.github.io/eventi/burlesque.html">Scopri l'evento &rarr;</a>
-                </div>
-                <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
-                    </div>
-                </div>
-            </article>
-            <article class="row">
-                <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">29 ott 2014</h3>
-                    <h5>Orario: 17:00-22:00</h5> 
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Outrgeous Craft Beer</a></h5> 
-                </div>
-                <div class="medium-3 large-3 columns">
-                    <img class="extra-space-image-event" src="http://beerstrot.github.io/img/thumbs/flamenco-e-birra-th.jpg" alt="Concerto Flamenco">
-                </div>
-                <div class="medium-6 large-6 columns">
-                    <h2>Flamenco e birra</h2>
-                    <p>La magica chitarra di Mendez DosCoines accompagnerà la presentazione della nuova birra <a href="menu-Beerstrot-quintupla-ipa.html">Ourageous Quintupla IPA</a> e dei piatti appositamente creati dallo Chef Giovanni.</p>
-                    <a href="http://beerstrot.github.io/eventi/flamenco-e-birra.html">Scopri l'evento &rarr;</a>
+                    <h2>Apertura col botto</h2>
+                    <p>Iniziano le danze e le bevute con uno spettacolo indimenticabile, birre fantastiche e hamburger incredibili</p>
+                    <a href="http://beerstrot.github.io/eventi/apertura.html">Scopri l'evento &rarr;</a>
                 </div>
                 <div class="row">
                     <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
